--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <div class="container">
     <div class="product-img">
-      <img src="./images/image-product-desktop.jpg" class="img">
+      <img src="./images/image-product-desktop.jpg" alt='Product-Image' class="img">
     </div>
 
     <div class="product-contant">
